loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:19: error: illegal start of simple expression
}forward();
^Poucet2:22: error: 'while' expected but '}' found.
	}
        ^